--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,33 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
-.head{
+
+h1{
+    font-size: 50px;
+}
+
+#head-color{
+    color: orange;
+}
+
+section{
+    display: flex;
+    /* margin: 50px; */
+}
+.main-page{
+    margin: 50px;
+}
+#link-button{
+text-decoration: none;
+background-image: linear-gradient(orange, tomato);
+padding: 10px 30px;
+color: white;
+font-weight: bold;
+border-radius: 5px;
+}
+.top-banner{
+    background-image: url(/image/top-banner.png);
+    background-repeat: no-repeat;
+}
     
-}
