--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ font-weight: bold;
 border-radius: 5px;
 }
 .top-banner{
-    background-image: url(/image/top-banner.png);
+    background-image: url(../image/top-banner.png);
     background-repeat: no-repeat;
 }
 .dream-banner{
     margin-top: 80px;
-    background-image: url(/image/dream-bg.png);
+    background-image: url(./image/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
