--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ font-weight: bold;
 border-radius: 5px;
 }
 .top-banner{
-    background-image: url(../image/top-banner.png);
+    background-image: url(./image/top-banner.png);
     background-repeat: no-repeat;
 }
 .dream-banner{
