--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body {
 h1 {
   font-size: 50px;
 }
+h2{
+    font-size: 30px;
+}
 
 #head-color {
   color: orange;
@@ -37,6 +40,10 @@ h1 {
   background-position: right;
   margin-bottom: 150px;
 }
+.exp-banner{
+    background-image: url(./image/exp-bg.png);
+    background-repeat: no-repeat;
+}
 .sec-page {
   /* margin-top: 100px; */
   /* margin: 50px; */
@@ -47,15 +54,25 @@ h1 {
   width: 50%;
   margin-right: 80px;
 }
-.last-banner {
-    margin: 80px;
-}
-.experience-sec {
-  display: flex;
-}
-.exprience-article {
-}
+
+
+
 .exprience-container {
-  width: 50%;
-  padding: 0px 100px 0px 100px;
+  width: 40%;
+  padding: 50px 100px 50px 100px;
+  box-shadow: 10px 10px 30px rgb(46, 45, 45);
+  /* margin-left: 80px;
+  margin-right: 80px; */
+  text-align: center;
+  /* margin-bottom: 100px; */
+  margin: 100px;
+}
+.exprience-container-color{
+    color: orange;
+}
+.exprience-container-border1{
+
+}
+.exprience-container-border2{
+
 }
