--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h2{
   margin-right: 80px; */
   text-align: center;
   /* margin-bottom: 100px; */
-  margin: 100px;
+  margin: 10px 150px 100px 150px;
 }
 .exprience-container-color{
     color: orange;
