--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,18 @@ h2{
   border-radius: 5px;
 }
 .top-banner {
-  background-image: url(./image/top-banner.png);
+  background-image: url(/image/top-banner.png);
   background-repeat: no-repeat;
 }
 .dream-banner {
   margin-top: 80px;
-  background-image: url(./image/dream-bg.png);
+  background-image: url(/image/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
   margin-bottom: 150px;
 }
 .exp-banner{
-    background-image: url(./image/exp-bg.png);
+    background-image: url(/image/exp-bg.png);
     background-repeat: no-repeat;
 }
 .sec-page {
